# MOI_Lab4

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  ppm.cpp  renderer.cpp  renderer.hpp  scene_config.cpp  scene_config.hpp  scene_types.hpp
